feat: 修改部分配置

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,37 @@ Temporary Items
 
 # debug file
 _site
+/target/
+!.mvn/wrapper/maven-wrapper.jar
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/
+
+### Project Ignore Files ###
+/tmp/
+*.pid
+*.log
+*.gz
+mvnw
+mvnw.cmd
+.mvn/
