feat: 其他配置修改

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 精神之源
-SEOTitle: 高强的博客
+title: 独立之精神，自由之思想
+SEOTitle: 精神之源
 header-img: img/post-bg-desk.jpg
 email: peiqianggao@foxmail.com
 description: "独立之精神，自由之思想"
@@ -17,7 +17,7 @@ sidebar-avatar: /img/centos_sidebar.png      # use absolute URL, seeing it's use
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     gao1011
+zhihu_username:     gao-pei-qiang
 github_username:    peiqianggao
 #facebook_username:  gaopq
 jianshu_username:   8ba24037c555
@@ -71,7 +71,7 @@ gitalk:
 
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
+featured-condition-size: 0              # 相同标签数量大于这个数，才会出现在首页
 
 # Progressive Web Apps
 chrome-tab-theme-color: "#000000"
