--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,16 +1,19 @@
 {
-  "name": "BY Blog",
-  "short_name": "BY Blog",
-  "description": "A personal blog by engineer",
-  "icons": [{
-    "src": "icons/pwa_icon_128.png",
-    "sizes": "128x128",
-    "type": "image/png"
-  }, {
-    "src": "icons/pwa_icon_512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }],
+  "name": "精神之源",
+  "short_name": "精神之源",
+  "description": "独立之精神，自由之思想",
+  "icons": [
+    {
+      "src": "icons/favicon120.png",
+      "sizes": "120x120",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/favicon192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ],
   "background_color": "#fff",
   "theme_color": "#000",
   "start_url": "/",
