--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gaopq",
-    "title": "精神之源",
+    "title": "异步，永不止步",
     "author": "gaopq <peiqianggao@163.com>",
     "version": "1.7.0",
     "homepage": "https://peiqianggao.github.io",
