--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 独立之精神，自由之思想
-SEOTitle: 精神之源
+title: 异步，永不止步
+SEOTitle: 异步，永不止步
 header-img: img/post-bg-desk.jpg
 email: peiqianggao@foxmail.com
-description: "独立之精神，自由之思想"
-keyword: "Gaopq, Gaopq Blog, 高强的博客, gaopq, peiqianggao, 高沛强, 高强, Java, 独立之精神, 自由之思想"
+description: "异步，永不止步"
+keyword: "Gaopq, Gaopq Blog, 高强的博客, gaopq, peiqianggao, 高沛强, 高强, Java, 异步永不止步"
 url: "https://peiqiangao.github.io"
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/peiqianggao/peiqianggao.github.io.git" # you code repository
@@ -12,7 +12,7 @@ github_repo: "https://github.com/peiqianggao/peiqianggao.github.io.git" # you co
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "实践出真知"
-sidebar-avatar: /img/centos_sidebar.png      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/water.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # SNS settings
 RSS: false
@@ -80,7 +80,15 @@ service-worker: true
 # Friends
 friends: [
 {
-  title: "简书·peiqianggao",
+  title: "简书·gaopq",
   href: "https://www.jianshu.com/u/8ba24037c555"
+},
+{
+  title: "SegmentFault·gaopq",
+  href: "https://segmentfault.com/u/leogao"
+},
+{
+  title: "掘金·gaopq",
+  href: "https://juejin.im/user/593e1f785c497d006b94cd8d"
 }
 ]
