feat: 个人信息修改

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: 异步，永不止步
-SEOTitle: 异步，永不止步
+title: 凡所过往，皆为序章
+SEOTitle: 凡所过往，皆为序章
 header-img: img/post-bg-desk.jpg
 email: peiqianggao@foxmail.com
-description: "异步，永不止步"
-keyword: "Gaopq, Gaopq Blog, 高强的博客, gaopq, peiqianggao, 高沛强, 高强, Java, 异步永不止步"
+description: "凡所过往，皆为序章"
+keyword: "Gaopq, Gaopq Blog, 高强的博客, gaopq, peiqianggao, 高沛强, 高强, Java, 凡所过往，皆为序章，Eric·Gao"
 url: "https://peiqiangao.github.io"
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/peiqianggao/peiqianggao.github.io.git" # you code repository
@@ -17,23 +17,23 @@ sidebar-avatar: /img/water.jpg      # use absolute URL, seeing it's used in both
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     gao-pei-qiang
-github_username:    peiqianggao
+zhihu_username: gao-pei-qiang
+github_username: peiqianggao
 #facebook_username:  gaopq
-jianshu_username:   8ba24037c555
+jianshu_username: 8ba24037c555
 #twitter_username:   qiubaiying
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
+exclude: [ "less","node_modules","Gruntfile.js","package.json","README.md" ]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
 
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+gems: [ jekyll-paginate ]
 
 
 # Markdown settings
@@ -79,16 +79,16 @@ service-worker: true
 
 # Friends
 friends: [
-{
-  title: "简书·gaopq",
-  href: "https://www.jianshu.com/u/8ba24037c555"
-},
-{
-  title: "SegmentFault·gaopq",
-  href: "https://segmentfault.com/u/leogao"
-},
-{
-  title: "掘金·gaopq",
-  href: "https://juejin.im/user/593e1f785c497d006b94cd8d"
-}
+  {
+    title: "简书·gaopq",
+    href: "https://www.jianshu.com/u/8ba24037c555"
+  },
+  {
+    title: "SegmentFault·gaopq",
+    href: "https://segmentfault.com/u/leogao"
+  },
+  {
+    title: "掘金·gaopq",
+    href: "https://juejin.im/user/593e1f785c497d006b94cd8d"
+  }
 ]
