feat: 修改博客封面图

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gaopq",
-    "title": "异步，永不止步",
+    "title": "凡所过往，皆为序章",
     "author": "gaopq <peiqianggao@163.com>",
     "version": "1.7.0",
     "homepage": "https://peiqianggao.github.io",
