--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "精神之源",
-  "short_name": "精神之源",
-  "description": "独立之精神，自由之思想",
+  "name": "凡所过往，皆为序章",
+  "short_name": "凡所过往，皆为序章",
+  "description": "凡所过往，皆为序章",
   "icons": [
     {
       "src": "icons/favicon120.png",
