--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,8 @@ jianshu_username: 8ba24037c555
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
-permalink: pretty
+# permalink: pretty
+permalink: date.html
 paginate: 10
 exclude: [ "less","node_modules","Gruntfile.js","package.json","README.md" ]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
