--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ jianshu_username: 8ba24037c555
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 # permalink: pretty
-permalink: :id
+permalink: /:year/:month/:day/:hour:minute
 paginate: 10
 exclude: [ "less","node_modules","Gruntfile.js","package.json","README.md" ]
 anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
